// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cut extension - plugin curly syntax should close all tags correctly and insert two p tags 1`] = `
<ul>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 1
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
</ul>
`;

exports[`Cut extension - plugin curly syntax should close all tags correctly when given a bullet-list with several items 1`] = `
<ul>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 1
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 2
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 3
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
</ul>
`;

exports[`Cut extension - plugin curly syntax should render nested cuts 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Outer title
  </summary>
  <div class="yfm-cut-content">
    <p>
      Outer content
    </p>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Inner title
      </summary>
      <div class="yfm-cut-content">
        <p>
          Inner content
        </p>
      </div>
    </details>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render siblings cuts 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title 1
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content 1
    </p>
  </div>
</details>
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title 2
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content 2
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render simple cut 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render simple cut with code in it 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title
  </summary>
  <div class="yfm-cut-content">
    <pre>
      <code class="hljs">
        Code
      </code>
    </pre>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render title with format 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    <strong>
      Strong cut title
    </strong>
  </summary>
  <div class="yfm-cut-content">
    <p>
      Content we want to hide
    </p>
  </div>
</details>
`;
